
13. IDPB, ITPB and ISPB: new interface method
      function AddByTypeName(ParamTypeName: AnsiString): IDPBItem/ITPBItem/ISPBItem;
    This is used to add a parameter block item by the string equivalent of its
    symbolic type name. e.g. DPB.AddByTypeName('isc_dpb_user_name').AsString := '...'

14. IDPBItem/ITPBItem/ISPBItem: new interface method:
      function getParamTypeName: AnsiString;

FBINTF Change Log  version          (1.1-6 Build 12237) Tue, 21 Jul 2020 08:54:21 +0100

1. GetImplementationVersion now correctly returns '3.0' for Firebird 3 API
   with a Firebrid 3 client library.

2. Linux Only: FIREBIRD environment variable is now checked when loading the client library.
    If a client library path is not explicitly provided and the FIREBIRD environment
    variable is set then the directory given by this variable and any 'lib' subdirectory
    are searched for the Firebird client library. Only if none is found, is the default
    client library used.

3.  IUtil.FormatStatus now used to format error messages when using new API

4.  Fixed Array SDL: array_desc_scale now correctly encoded as a signed integer.

5.  SQL_TEXT handling changed. When the value of an SQL_TEXT (i.e. fixed width string) column is
    returned using GetAsString and the string codepage is UTF8, the string is truncated so
    that the byte length corresponds to the number of characters specified for the column.
    SQL_TEXT strings are no longer automatically trimmed to remove all trailing white space. This is
    correct behaviour but may affect some implementations that relied upon automatic
    trimming of trailing white space.

6.  New IFirebirdAPI Calls:
      function GetClientMajor: integer;
      function GetClientMinor: integer;

7.  IColumnMetaData and IArrayMetaData: new method
      function GetCharSetWidth: integer;

FBINTF Change Log  version          (1.1-5 Build 12022) Fri, 17 Apr 2020 10:35:55 +0100
