@@ -3,27 +3,27 @@
   <ProjectSession>
     <Version Value="11"/>
     <BuildModes Active="Default"/>
-    <Units Count="96">
+    <Units Count="99">
       <Unit0>
         <Filename Value="testsuite.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
         <Filename Value="Test1.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="3"/>
-        <TopLine Value="165"/>
+        <EditorIndex Value="5"/>
+        <TopLine Value="152"/>
         <CursorPos X="7" Y="184"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="Test3.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit2>
       <Unit3>
         <Filename Value="Test4.pas"/>
@@ -31,14 +31,14 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="53"/>
         <CursorPos X="106" Y="171"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit3>
       <Unit4>
         <Filename Value="Test5.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="105"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit4>
       <Unit5>
         <Filename Value="Test6.pas"/>
@@ -46,19 +46,19 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="181"/>
         <CursorPos Y="142"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit5>
       <Unit6>
         <Filename Value="Test7.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit6>
       <Unit7>
         <Filename Value="Test8.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit7>
       <Unit8>
         <Filename Value="Test9.pas"/>
@@ -66,13 +66,13 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="91"/>
         <CursorPos X="57" Y="120"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit8>
       <Unit9>
         <Filename Value="Test10.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit9>
       <Unit10>
         <Filename Value="Test11.pas"/>
@@ -80,7 +80,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="258"/>
         <CursorPos Y="270"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit10>
       <Unit11>
         <Filename Value="Test12.pas"/>
@@ -88,13 +88,13 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="96"/>
         <CursorPos X="42" Y="82"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit11>
       <Unit12>
         <Filename Value="Test13.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit12>
       <Unit13>
         <Filename Value="Test14.pas"/>
@@ -102,13 +102,13 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="94"/>
         <CursorPos Y="114"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit13>
       <Unit14>
         <Filename Value="Test15.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit14>
       <Unit15>
         <Filename Value="Test16.pas"/>
@@ -116,48 +116,48 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="120"/>
         <CursorPos Y="137"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
       </Unit15>
       <Unit16>
         <Filename Value="Makefile.fpc"/>
         <IsPartOfProject Value="True"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="64"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit16>
       <Unit17>
         <Filename Value="Test17.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="16"/>
         <TopLine Value="386"/>
         <CursorPos X="62" Y="386"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
         <Loaded Value="True"/>
       </Unit17>
       <Unit18>
         <Filename Value="Test18.pas"/>
         <IsPartOfProject Value="True"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
       </Unit18>
       <Unit19>
         <Filename Value="testApp/TestApplication.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="4"/>
-        <TopLine Value="289"/>
-        <CursorPos X="32" Y="306"/>
-        <UsageCount Value="21"/>
-        <Loaded Value="True"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="1232"/>
+        <CursorPos X="2" Y="1241"/>
+        <UsageCount Value="24"/>
       </Unit19>
       <Unit20>
         <Filename Value="FBTestApp.pas"/>
         <IsPartOfProject Value="True"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
       </Unit20>
       <Unit21>
         <Filename Value="Test2.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="5"/>
-        <TopLine Value="76"/>
-        <UsageCount Value="21"/>
+        <EditorIndex Value="6"/>
+        <TopLine Value="115"/>
+        <CursorPos Y="141"/>
+        <UsageCount Value="24"/>
         <Loaded Value="True"/>
       </Unit21>
       <Unit22>
@@ -176,21 +176,23 @@
       </Unit23>
       <Unit24>
         <Filename Value="../client/FBClientAPI.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="327"/>
-        <CursorPos Y="345"/>
-        <UsageCount Value="10"/>
+        <EditorIndex Value="11"/>
+        <TopLine Value="554"/>
+        <CursorPos X="3" Y="557"/>
+        <UsageCount Value="11"/>
+        <Loaded Value="True"/>
       </Unit24>
       <Unit25>
         <Filename Value="../IBUtils.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="930"/>
-        <CursorPos X="3" Y="942"/>
-        <UsageCount Value="14"/>
+        <EditorIndex Value="14"/>
+        <TopLine Value="52"/>
+        <CursorPos X="95" Y="66"/>
+        <UsageCount Value="15"/>
+        <Loaded Value="True"/>
       </Unit25>
       <Unit26>
         <Filename Value="../client/FBSQLData.pas"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="15"/>
         <TopLine Value="709"/>
         <CursorPos X="3" Y="724"/>
         <ExtraEditorCount Value="1"/>
@@ -199,7 +201,7 @@
           <TopLine Value="142"/>
           <CursorPos X="41" Y="142"/>
         </ExtraEditor1>
-        <UsageCount Value="19"/>
+        <UsageCount Value="20"/>
         <Loaded Value="True"/>
       </Unit26>
       <Unit27>
@@ -212,16 +214,16 @@
       <Unit28>
         <Filename Value="../IB.pas"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="427"/>
-        <CursorPos Y="444"/>
-        <UsageCount Value="19"/>
+        <TopLine Value="1440"/>
+        <CursorPos Y="1470"/>
+        <UsageCount Value="20"/>
         <Loaded Value="True"/>
       </Unit28>
       <Unit29>
         <Filename Value="../client/include/uloadlibrary.inc"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="45"/>
-        <CursorPos X="44" Y="76"/>
+        <TopLine Value="42"/>
+        <CursorPos Y="49"/>
         <UsageCount Value="14"/>
       </Unit29>
       <Unit30>
@@ -232,31 +234,34 @@
       </Unit30>
       <Unit31>
         <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="272"/>
-        <CursorPos Y="289"/>
-        <UsageCount Value="18"/>
+        <EditorIndex Value="12"/>
+        <TopLine Value="249"/>
+        <CursorPos Y="255"/>
+        <UsageCount Value="19"/>
+        <Loaded Value="True"/>
       </Unit31>
       <Unit32>
         <Filename Value="../client/2.5/FB25ClientAPI.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="184"/>
-        <CursorPos X="14" Y="180"/>
-        <UsageCount Value="18"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="390"/>
+        <CursorPos Y="419"/>
+        <UsageCount Value="19"/>
+        <Loaded Value="True"/>
       </Unit32>
       <Unit33>
         <Filename Value="/usr/share/fpcsrc/rtl/inc/dynlibs.pas"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="138"/>
-        <CursorPos X="24" Y="168"/>
-        <UsageCount Value="13"/>
+        <TopLine Value="142"/>
+        <CursorPos X="18" Y="165"/>
+        <UsageCount Value="14"/>
       </Unit33>
       <Unit34>
         <Filename Value="../client/FBAttachment.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="165"/>
-        <CursorPos X="43" Y="169"/>
-        <UsageCount Value="14"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="442"/>
+        <CursorPos X="3" Y="445"/>
+        <UsageCount Value="15"/>
+        <Loaded Value="True"/>
       </Unit34>
       <Unit35>
         <Filename Value="../client/FBStatement.pas"/>
@@ -301,15 +306,16 @@
         <Filename Value="/usr/share/fpcsrc/rtl/unix/dynlibs.inc"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="50"/>
-        <CursorPos X="3" Y="24"/>
-        <UsageCount Value="10"/>
+        <CursorPos X="23" Y="74"/>
+        <UsageCount Value="11"/>
       </Unit41>
       <Unit42>
         <Filename Value="../client/2.5/IBHeader.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="1290"/>
-        <CursorPos Y="1308"/>
-        <UsageCount Value="10"/>
+        <EditorIndex Value="9"/>
+        <TopLine Value="1183"/>
+        <CursorPos Y="1202"/>
+        <UsageCount Value="11"/>
+        <Loaded Value="True"/>
       </Unit42>
       <Unit43>
         <Filename Value="../client/3.0/FB30Services.pas"/>
@@ -342,9 +348,9 @@
       <Unit47>
         <Filename Value="../client/2.5/FB25Attachment.pas"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="303"/>
-        <CursorPos X="29" Y="310"/>
-        <UsageCount Value="12"/>
+        <TopLine Value="102"/>
+        <CursorPos Y="119"/>
+        <UsageCount Value="13"/>
       </Unit47>
       <Unit48>
         <Filename Value="../client/FBTransaction.pas"/>
@@ -425,11 +431,10 @@
       </Unit58>
       <Unit59>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="17"/>
         <TopLine Value="957"/>
         <CursorPos X="22" Y="985"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="11"/>
         <Loaded Value="True"/>
       </Unit59>
       <Unit60>
@@ -490,17 +495,21 @@
       </Unit67>
       <Unit68>
         <Filename Value="../changelog"/>
-        <EditorIndex Value="-1"/>
-        <CursorPos X="3" Y="28"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="13"/>
+        <TopLine Value="70"/>
+        <CursorPos X="75" Y="84"/>
         <UsageCount Value="11"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit68>
       <Unit69>
         <Filename Value="../client/3.0/firebird/Firebird.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="998"/>
-        <CursorPos X="9" Y="1017"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="3613"/>
+        <CursorPos Y="3630"/>
         <UsageCount Value="10"/>
+        <Loaded Value="True"/>
       </Unit69>
       <Unit70>
         <Filename Value="../../ibx/dclibx.pas"/>
@@ -676,87 +685,166 @@
       </Unit93>
       <Unit94>
         <Filename Value="../../ibx/runtime/nongui/IBQuery.pas"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="88"/>
         <CursorPos X="14" Y="88"/>
-        <UsageCount Value="12"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="13"/>
       </Unit94>
       <Unit95>
         <Filename Value="../../ibx/changelog"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="18"/>
         <TopLine Value="923"/>
         <CursorPos X="103" Y="947"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="13"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit95>
+      <Unit96>
+        <Filename Value="../IBExternals.pas"/>
+        <EditorIndex Value="10"/>
+        <TopLine Value="43"/>
+        <CursorPos X="3" Y="59"/>
+        <UsageCount Value="11"/>
+        <Loaded Value="True"/>
+      </Unit96>
+      <Unit97>
+        <Filename Value="../../../../fpcsrc/3.0.4/rtl/inc/objpas.inc"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="65"/>
+        <CursorPos Y="82"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit97>
+      <Unit98>
+        <Filename Value="../../../../fpcsrc/3.0.4/rtl/inc/system.inc"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="905"/>
+        <CursorPos Y="922"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit98>
     </Units>
-    <JumpHistory Count="16" HistoryIndex="15">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="255" Column="15" TopLine="238"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="82" Column="21" TopLine="59"/>
       </Position1>
       <Position2>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="572" Column="22" TopLine="567"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="274" Column="3" TopLine="272"/>
       </Position2>
       <Position3>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="321" Column="15" TopLine="321"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="82" Column="16" TopLine="65"/>
       </Position3>
       <Position4>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="255" Column="15" TopLine="238"/>
+        <Filename Value="../client/FBClientAPI.pas"/>
+        <Caret Line="149" Column="25" TopLine="131"/>
       </Position4>
       <Position5>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="572" Column="21" TopLine="564"/>
+        <Filename Value="../client/FBClientAPI.pas"/>
+        <Caret Line="283" Column="3" TopLine="281"/>
       </Position5>
       <Position6>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="321" Column="15" TopLine="317"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="88" Column="25" TopLine="65"/>
       </Position6>
       <Position7>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="126" Column="18" TopLine="100"/>
+        <Filename Value="../client/FBClientAPI.pas"/>
+        <Caret Line="149" Column="30" TopLine="123"/>
       </Position7>
       <Position8>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="394" Column="26" TopLine="391"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="253" Column="36" TopLine="237"/>
       </Position8>
       <Position9>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="126" Column="15" TopLine="85"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="379" Column="25" TopLine="365"/>
       </Position9>
       <Position10>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="152" Column="10" TopLine="124"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="131" Column="23" TopLine="110"/>
       </Position10>
       <Position11>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="755" Column="20" TopLine="727"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="379" Column="53" TopLine="372"/>
       </Position11>
       <Position12>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="845" Column="20" TopLine="818"/>
+        <Filename Value="../IB.pas"/>
+        <Caret Line="1470" TopLine="1440"/>
       </Position12>
       <Position13>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="896" Column="8" TopLine="868"/>
+        <Filename Value="../client/3.0/firebird/Firebird.pas"/>
+        <Caret Line="3630" TopLine="3613"/>
       </Position13>
       <Position14>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="966" Column="19" TopLine="938"/>
+        <Filename Value="../../../../fpcsrc/3.0.4/rtl/inc/objpas.inc"/>
+        <Caret Line="960" TopLine="943"/>
       </Position14>
       <Position15>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="968" Column="10" TopLine="940"/>
+        <Filename Value="../../../../fpcsrc/3.0.4/rtl/inc/objpas.inc"/>
+        <Caret Line="82" TopLine="65"/>
       </Position15>
       <Position16>
-        <Filename Value="Test17.pas"/>
-        <Caret Line="386" Column="62" TopLine="386"/>
+        <Filename Value="../client/FBClientAPI.pas"/>
+        <Caret Line="340" TopLine="323"/>
       </Position16>
+      <Position17>
+        <Filename Value="../../../../fpcsrc/3.0.4/rtl/inc/objpas.inc"/>
+        <Caret Line="82" TopLine="65"/>
+      </Position17>
+      <Position18>
+        <Filename Value="../client/FBClientAPI.pas"/>
+        <Caret Line="340" TopLine="323"/>
+      </Position18>
+      <Position19>
+        <Filename Value="../../../../fpcsrc/3.0.4/rtl/inc/objpas.inc"/>
+        <Caret Line="960" TopLine="943"/>
+      </Position19>
+      <Position20>
+        <Filename Value="../../../../fpcsrc/3.0.4/rtl/inc/objpas.inc"/>
+        <Caret Line="82" TopLine="65"/>
+      </Position20>
+      <Position21>
+        <Filename Value="../../../../fpcsrc/3.0.4/rtl/inc/system.inc"/>
+        <Caret Line="922" TopLine="905"/>
+      </Position21>
+      <Position22>
+        <Filename Value="../client/FBClientAPI.pas"/>
+        <Caret Line="340" TopLine="323"/>
+      </Position22>
+      <Position23>
+        <Filename Value="../client/FBClientAPI.pas"/>
+        <Caret Line="205" Column="15" TopLine="189"/>
+      </Position23>
+      <Position24>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="379" Column="53" TopLine="372"/>
+      </Position24>
+      <Position25>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="88" Column="26" TopLine="85"/>
+      </Position25>
+      <Position26>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="255" TopLine="251"/>
+      </Position26>
+      <Position27>
+        <Filename Value="../IB.pas"/>
+        <Caret Line="1470" TopLine="1440"/>
+      </Position27>
+      <Position28>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="255" TopLine="249"/>
+      </Position28>
+      <Position29>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="257" TopLine="249"/>
+      </Position29>
+      <Position30>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="258" TopLine="249"/>
+      </Position30>
     </JumpHistory>
     <RunParams>
       <FormatVersion Value="2"/>
